fix for ie 11 footer too large

--- a/src/assets/drizzle/styles/base/_icons.scss
+++ b/src/assets/drizzle/styles/base/_icons.scss
@@ -6,6 +6,7 @@
 
 .#{$app-namespace}-b-Icon--large {
   width: 2.1875rem;
+  height: 2.1875rem;
 }
 
 .#{$app-namespace}-b-Icon--small {
